<resources>
    <string name="app_name">COVID19 Update</string>
    <string name="cases">Cases</string>
    <string name="_0">0</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="cases_per_million">Cases Per Million</string>
    <string name="new_deaths">New Deaths</string>
    <string name="recovered_today">Recovered Today</string>
    <string name="active">Active</string>
    <string name="recovered_per_million">Recovered Per Million</string>
    <string name="active_per_million">Active Per Million</string>
    <string name="new_cases">New Cases</string>
    <string name="deaths_per_million">Deaths Per Million</string>
</resources>